// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> componentDidMount 1`] = `
<div
  className="App"
>
  <div
    className="Header"
  >
    <h1>
      red-rhinoceros
    </h1>
    <h2>
      2.0.0-alpha.4
    </h2>
  </div>
  <div
    className="OpenWeatherMap"
  >
    <div
      className="main-heading"
    >
      London
      , 
      GB
    </div>
    <div
      className="day"
    >
      Monday 2:50 PM
    </div>
    <div
      className="description"
    >
      shower rain
    </div>
    <div
      className="icon"
    >
      <img
        alt="shower rain"
        src="http://openweathermap.org/img/w/09d.png"
      />
    </div>
    <div
      className="temperature"
    >
      23.33
       °C
    </div>
  </div>
</div>
`;

exports[`<App /> constructor 1`] = `
<div
  className="App"
>
  <div
    className="Header"
  >
    <h1>
      
    </h1>
    <h2>
      
    </h2>
  </div>
  <div
    className="OpenWeatherMap"
  />
</div>
`;
